--- a/Addons/styles.css
+++ b/Addons/styles.css
@@ -38,7 +38,7 @@ h2 {
 .hero {
   height: 100vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), 
-                    url("/minecraft.jpg");
+                    url("Addons/minecraft.jpg");
   background-size: cover;
   background-position: center;
   position: relative;
